<resources>
    <string name="app_name">Insurance Premiume Calculator</string>
    <string name="age">Age</string>
    <string-array name="age_group">
        <item>Less than 17</item>
        <item>17 to 25</item>
        <item>26 to 30</item>
        <item>31 to 40</item>
        <item>41 to 55</item>
        <item>More than 55</item>
    </string-array>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="smoker">Are You A Smoker?</string>
    <string name="smoker_yes">Yes, I Am A Smoker</string>
    <string name="premium">Premium</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
</resources>